--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -4,52 +4,97 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background: url('/assets/images/login_bg.jpg') no-repeat center;
+  background: url(/assets/images/login_bg.jpg) no-repeat center;
   background-size: cover;
-}
-
-.loginAndRegBox {
-  width: 400px;
-  height: 310px;
-  background-color: #fff;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.title-box {
-  height: 60px;
-  background: url('/assets/images/login_title.png') no-repeat center;
-}
-
-.reg-box {
-  display: none;
-}
-
-.layui-form {
-  padding: 0 30px;
-}
-
-.links {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.links a {
-  font-size: 12px;
-}
-
-.layui-form-item {
   position: relative;
 }
-
-.layui-icon {
+html .loginAndReg,
+body .loginAndReg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 540px;
+  height: 410px;
+  background-color: #fff;
+}
+html .loginAndReg .title,
+body .loginAndReg .title {
+  height: 60px;
+  background: url(/assets/images/login_title.png) no-repeat center;
+  background-size: 50%;
+  padding: 15px 0;
+}
+html .loginAndReg .reg_box,
+body .loginAndReg .reg_box,
+html .loginAndReg .login_box,
+body .loginAndReg .login_box {
+  display: none;
+  text-align: center;
+}
+html .loginAndReg .reg_box .layui-input-block,
+body .loginAndReg .reg_box .layui-input-block,
+html .loginAndReg .login_box .layui-input-block,
+body .loginAndReg .login_box .layui-input-block {
+  margin-left: 0;
+}
+html .loginAndReg .reg_box span,
+body .loginAndReg .reg_box span,
+html .loginAndReg .login_box span,
+body .loginAndReg .login_box span {
+  display: inline-block;
+  position: relative;
+  padding: 0;
+}
+html .loginAndReg .reg_box span i,
+body .loginAndReg .reg_box span i,
+html .loginAndReg .login_box span i,
+body .loginAndReg .login_box span i {
+  line-height: 50px;
   position: absolute;
   left: 10px;
-  top: 10px;
+  font-size: 24px;
 }
-
-.layui-input {
-  padding-left: 32px;
+html .loginAndReg .reg_box span input,
+body .loginAndReg .reg_box span input,
+html .loginAndReg .login_box span input,
+body .loginAndReg .login_box span input {
+  width: 465px;
+  height: 50px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+  padding-left: 40px;
+  font-size: 18px;
+  border: 1px solid #d6d6d6;
+  border-radius: 5px;
+}
+html .loginAndReg .reg_box span .setup,
+body .loginAndReg .reg_box span .setup,
+html .loginAndReg .login_box span .setup,
+body .loginAndReg .login_box span .setup {
+  width: 465px;
+  height: 50px;
+  font-size: 18px;
+  padding: 0;
+  margin-bottom: 5px;
+  cursor: pointer;
+  text-align: center;
+  border: none;
+  color: #fff;
+  text-shadow: 1px 0px 5px black;
+  background-color: #26a6f7;
+}
+html .loginAndReg .reg_box a,
+body .loginAndReg .reg_box a,
+html .loginAndReg .login_box a,
+body .loginAndReg .login_box a {
+  display: block;
+  text-align: right;
+  font-size: 18px;
+  font-weight: 500;
+  margin-right: 40px;
+}
+html .loginAndReg .login_box,
+body .loginAndReg .login_box {
+  display: block;
 }
